2005-01-30  Piotr Eljasiak  <epiotr@cvs.gnome.org>

	* gnome-commander.spec.in
        Updated copyright info.

2005-01-28  Piotr Eljasiak  <epiotr@cvs.gnome.org>

	* gnome-commander.spec.in:
	Fixed typo: rpm --> rpmbuild

2004-12-25  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Add «nb» to ALL_LINGUAS

2004-11-24  Amanpreet Singh Alam<amanlinux@netscape.net>

	*configure.in: Add pa ot ALL_LINGUAS

2004-05-04  Gustavo Maciel Dias Vieira  <gdvieira@zaz.com.br>

	* configure.in: Added pt_BR to ALL_LINGUAS.

2004-05-03  Piotr Eljasiak  <epiotr@cvs.gnome.org>

	* src/gnome-cmd-dir-indicator.c:
	* src/gnome-cmd-main-menu.c:
	Connected Manage Bookmarks dialog to the bookmarks shortcut.

2004-04-30  Piotr Eljasiak  <epiotr@cvs.gnome.org>

	* src/gnome-cmd-file-props-dialog.c:
	* src/utils.c:
	i18n & pluralized "%s bytes".

	* src/gnome-cmd-data.c:
	* src/utils.c:
	Added some minor safety precautions.

2004-04-28  Marcus Bjurman  <marbj499@student.liu.se>

	* src/gnome-cmd-dir-indicator.c: 
	* src/gnome-cmd-dir-indicator.h: 
	* src/utils.c:
	Added a bookmarks shortcut to the directory indicator.

	* src/gnome-cmd-file.c (gnome_cmd_file_get_real_path):
	Fixed crash when trying to copy the currently selected files
	path to the cmdline by pressing ctrl+shift+enter.

2004-04-26  Piotr Eljasiak  <epiotr@cvs.gnome.org>

	* src/gnome-cmd-file-selector.c:
	i18n of symlink name if SHIFT+CTRL+F5.

2004-04-24  Andras Timar  <timar@gnome.hu>

	* configure.in: Added hu to ALL_LINGUAS.

2004-04-21  Piotr Eljasiak  <epiotr@cvs.gnome.org>

	* src/gnome-cmd-file-list.c:
	Added shortcut CTRL+M to Multi-Rename-Tool for better compliance with
	Total Commander.

2004-04-19  Marcus Bjurman  <marbj499@student.liu.se>

	* src/gnome-cmd-main-win.c (update_drop_con_button):
	Fixed problem with the disconnect button not behaving correctly when
	connecting to ftp-servers and being in supermount mode.

	* src/gnome-cmd-xfer.c: